fix footer overflow and fix button reset functionality

--- a/factor/style.css
+++ b/factor/style.css
@@ -115,7 +115,7 @@ input[type="number"]::-webkit-outer-spin-button {
   display: grid;
   border: 1px dotted black;
   border-radius: 5px;
-  height: 5rem;
+  height: auto;
   grid-template-columns: 2fr 1fr;
   margin-top: 20px;
   padding: 8px;
